<resources>
    <string name="app_name">NeoGameDB</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="lista_juegos">Lista Juegos</string>
    <string name="salir">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_a_la_lista">Agregar a la lista</string>
    <string name="volver">Volver</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="acceder">Acceder</string>
    <string name="registrar">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="email">email@email.com</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="borrar">BORRAR</string>
</resources>